--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<img src="./assets/css/images/me2.jpg" style="border-radius: 20rem; height: 15rem; width: 15rem;"/>
 							</div>
 							<h1>Meriem Elach-haeb</h1>
-							<p>Web/mobile Developer &nbsp;&bull;&nbsp; IT Administrator &nbsp;&bull;&nbsp; CyberSecurity Consultant</p>
+							<p>Web/mobile Developer &nbsp;&bull;&nbsp; IT Administrator</p>
 							<nav>
 								<ul>
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
